--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "test:it:json": "bash -lc 'mkdir -p coverage/integration && jest --runInBand --testMatch \"<rootDir>/itest/**/*.test.js\" --json --outputFile=coverage/integration/itest-report.json'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "cookie-parser": "^1.4.6",
+    "axios": "^1.11.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "jsonwebtoken": "^9.0.2",
     "crypto-js": "^4.1.1",
-    "handlebars": "^4.7.8"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4"
+  },
+  "devDependencies": {
+    "jest": "^30.1.3",
+    "testcontainers": "^11.5.1"
   }
 }
