--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
     "test:it:json": "bash -lc 'mkdir -p coverage/integration && jest --runInBand --testMatch \"<rootDir>/itest/**/*.test.js\" --json --outputFile=coverage/integration/itest-report.json'"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "handlebars": "^4.7.8",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4"
+    "axios": "0.18.0",
+    "body-parser": "1.18.2",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "crypto-js": "3.1.2",
+    "ejs": "2.5.7",
+    "express": "4.16.0",
+    "handlebars": "4.0.12",
+    "helmet": "3.12.0",
+    "jsonwebtoken": "8.3.0",
+    "lodash": "4.17.4",
+    "moment": "2.19.3",
+    "minimist": "1.2.0",
+    "debug": "2.6.9",
+    "marked": "0.5.0",
+    "serialize-javascript": "1.5.0",
+    "tar": "4.4.6",
+    "ws": "6.1.0",
+    "underscore": "1.8.3",
+    "yargs-parser": "5.0.0"
   },
   "devDependencies": {
     "jest": "^30.1.3",
